--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,29 +1,41 @@
 pipeline {
     agent any
 
+    environment {
+        DOCKERHUB_CREDENTIALS = 'swarm'
+        IMAGE_NAME = 'adisree/reactswarm'
+    }
+
     stages {
-        stage('Clone') {
+        stage('Checkout') {
             steps {
-                git 'https://github.com/Adithya02-alt/react-swarm-app.git'
+                git(
+                    url: 'https://github.com/Adithya02-alt/react-swarm-app.git',
+                    branch: 'main'
+                )
             }
         }
 
-        stage('Install & Build') {
+        stage('Build') {
             steps {
-                sh 'npm install'
-                sh 'npm run build'
+                script {
+                    dockerImage = docker.build("${IMAGE_NAME}:latest")
+                }
             }
         }
 
-        stage('Docker Build') {
+        stage('Push') {
             steps {
-                sh 'sudo docker build -t react-swarm-app .'
-            }
-        }
-
+                script {
+                    docker.withRegistry('https://index.docker.io/v1/', DOCKERHUB_CREDENTIALS) {
+                        dockerImage.push('latest')
+                    }
         stage('Deploy to Docker Swarm') {
             steps {
                 sh 'docker stack deploy -c docker-compose.yml reactapp'
+                  }
+                }
+
             }
         }
     }
