--- a/jenkinsfile
+++ b/jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
     agent any
 
     environment {
-        DOCKERHUB_CREDENTIALS = 'swarm'
+        DOCKERHUB_CREDENTIALS = 'adi'
         IMAGE_NAME = 'adisree/reactswarm'
     }
 
