--- a/jenkinsfile
+++ b/jenkinsfile
@@ -30,7 +30,11 @@ pipeline {
                     docker.withRegistry('https://index.docker.io/v1/', DOCKERHUB_CREDENTIALS) {
                         dockerImage.push('latest')
                     }
-    
+        stage('Deploy to Docker Swarm') {
+            steps {
+                sh 'docker stack deploy -c docker-compose.yml reactapp'
+            }
+            }
             }
         }
     }
