--- a/jenkinsfile
+++ b/jenkinsfile
@@ -15,6 +15,26 @@ pipeline {
                 )
             }
         }
+      
+     stage('Install & Build') {
+            steps {
+                sh 'npm install'
+                sh 'npm run build'
+            }
+        }
+
+      stage('Docker Build') {
+            steps {
+                sh 'docker build -t react-swarm-app .'
+            }
+        }
+
+        stage('Deploy to Docker Swarm') {
+            steps {
+                sh 'docker stack deploy -c docker-compose.yml reactapp'
+            }
+        }
+
 
         stage('Build') {
             steps {
@@ -30,11 +50,6 @@ pipeline {
                     docker.withRegistry('https://index.docker.io/v1/', DOCKERHUB_CREDENTIALS) {
                         dockerImage.push('latest')
                     }
-        stage('Deploy to Docker Swarm') {
-            steps {
-                sh 'docker stack deploy -c docker-compose.yml reactapp'
-            }
-            }
             }
         }
     }
